# python-project-83

./: .env.example  .gitignore  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: build.yml
page_analyzer/: app.py  database.py  db.py  parser.py  url_validator.py  utils.py
page_analyzer/templates/: index.html  url.html  urls.html
