[project]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = [
    { name = "NikitaSukharev", email = "niita5505@icloud.com" }
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "flask>=3.0",
    "gunicorn>=20.1.0",
    "python-dotenv>=0.20.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.3",
    "psycopg2-binary>=2.9",
    "validators>=0.18.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.2",
    "pytest-cov>=4.1.0",
    "flake8>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["page_analyzer"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]
